// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SubNavBar Component With NavItems should render a navitem inside a subnavbar 1`] = `
<div
  class="navbar"
>
  <ul
    class="navbar__list-items"
  >
    <li>
      <a
        class=""
        href="#test"
      >
        Item A
      </a>
    </li>
  </ul>
</div>
`;

exports[`The SubNavBar Component With NavItems should render an included classname 1`] = `
<div
  class="navbar"
>
  <ul
    class="navbar__list-items"
  >
    <li>
      <a
        class=" test class-name"
        href="#test"
      >
        Item A
      </a>
    </li>
  </ul>
</div>
`;

exports[`The SubNavBar Component With NavItems should render multiple navitems inside a subnavbar 1`] = `
<div
  class="navbar"
>
  <ul
    class="navbar__list-items"
  >
    <li>
      <a
        class=""
        href="#itema"
      >
        Item A
      </a>
    </li>
    <li>
      <a
        class=""
        href="#itemb"
      >
        Item B
      </a>
    </li>
  </ul>
</div>
`;

exports[`The SubNavBar Component With NavItems should render with an active class if the active flag is true 1`] = `
<div
  class="navbar"
>
  <ul
    class="navbar__list-items"
  >
    <li>
      <a
        class="active test class-name"
        href="#test"
      >
        Item A
      </a>
    </li>
  </ul>
</div>
`;

exports[`The SubNavBar Component should render an included classname 1`] = `
<div
  class="navbar class name"
>
  <ul
    class="navbar__list-items"
  >
    Sample Text
  </ul>
</div>
`;

exports[`The SubNavBar Component should render children that are passed in 1`] = `
<div
  class="navbar"
>
  <ul
    class="navbar__list-items"
  >
    Sample Text
  </ul>
</div>
`;
